generated/checkers/refine/KN-Double-Free-19ebc1e6-2/build_logs/syntax-repair-refine-0-3/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::IfStmt* {anonymous}::SAGenTestChecker::findIfAncestor(const clang::Stmt*, clang::ASTContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:321:20: error: ‘DynTypedNode’ is not a member of ‘llvm’; did you mean ‘clang::DynTypedNode’?
  321 |   std::queue<llvm::DynTypedNode> Q;
      |                    ^~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ParentMapContext.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Checkers/utility.h:11,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ASTTypeTraits.h:257:7: note: ‘clang::DynTypedNode’ declared here
  257 | class DynTypedNode {
      |       ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:321:32: error: template argument 1 is invalid
  321 |   std::queue<llvm::DynTypedNode> Q;
      |                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:321:32: error: template argument 2 is invalid
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:324:5: error: request for member ‘push’ in ‘Q’, which is of non-class type ‘int’
  324 |   Q.push(llvm::DynTypedNode::create(*S));
      |     ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:324:16: error: ‘llvm::DynTypedNode’ has not been declared
  324 |   Q.push(llvm::DynTypedNode::create(*S));
      |                ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:328:13: error: request for member ‘empty’ in ‘Q’, which is of non-class type ‘int’
  328 |   while (!Q.empty() && Steps++ < MaxSteps) {
      |             ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:329:11: error: ‘DynTypedNode’ is not a member of ‘llvm’; did you mean ‘clang::DynTypedNode’?
  329 |     llvm::DynTypedNode Cur = Q.front();
      |           ^~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ParentMapContext.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Checkers/utility.h:11,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ASTTypeTraits.h:257:7: note: ‘clang::DynTypedNode’ declared here
  257 | class DynTypedNode {
      |       ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:330:7: error: request for member ‘pop’ in ‘Q’, which is of non-class type ‘int’
  330 |     Q.pop();
      |       ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:332:34: error: ‘Cur’ was not declared in this scope
  332 |     auto Parents = AC.getParents(Cur);
      |                                  ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:334:42: error: expected primary-expression before ‘>’ token
  334 |       if (const IfStmt *IS = P.get<IfStmt>())
      |                                          ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:334:44: error: expected primary-expression before ‘)’ token
  334 |       if (const IfStmt *IS = P.get<IfStmt>())
      |                                            ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:337:38: error: expected primary-expression before ‘>’ token
  337 |       if (const Stmt *PS = P.get<Stmt>()) {
      |                                      ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:337:40: error: expected primary-expression before ‘)’ token
  337 |       if (const Stmt *PS = P.get<Stmt>()) {
      |                                        ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:340:13: error: request for member ‘push’ in ‘Q’, which is of non-class type ‘int’
  340 |           Q.push(llvm::DynTypedNode::create(*PS));
      |             ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:340:24: error: ‘llvm::DynTypedNode’ has not been declared
  340 |           Q.push(llvm::DynTypedNode::create(*PS));
      |                        ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:342:45: error: expected primary-expression before ‘>’ token
  342 |       } else if (const Decl *PD = P.get<Decl>()) {
      |                                             ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:342:47: error: expected primary-expression before ‘)’ token
  342 |       } else if (const Decl *PD = P.get<Decl>()) {
      |                                               ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:345:13: error: request for member ‘push’ in ‘Q’, which is of non-class type ‘int’
  345 |           Q.push(llvm::DynTypedNode::create(*PD));
      |             ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:345:24: error: ‘llvm::DynTypedNode’ has not been declared
  345 |           Q.push(llvm::DynTypedNode::create(*PD));
      |                        ^~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
